<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Baptiste Candellier
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>

    <string name="onboarding_setup_auth_action">Sign in with Home\u00A0Assistant</string>
    <string name="onboarding_setup_host_discoveryError_message">An error occurred while contacting your instance. Check that the internal and external URLs are properly set up in its settings.</string>
    <string name="onboarding_setup_host_hint">Home\u00A0Assistant URL</string>
    <string name="onboarding_setup_host_ignoreTlsErrors_text">Ignore invalid TLS certificates</string>
    <string name="onboarding_setup_host_ignoreTlsErrors_warning">This option is dangerous for your privacy, as it will allow anyone to snoop on your HTTPS connection. If you use a custom certificate authority, please add its root to your device\'s root certificate store instead.</string>
    <string name="onboarding_setup_host_subtitle">Find your installation</string>
    <string name="onboarding_setup_host_zeroconf">
        <b>Psst! 👀</b> I\'ve also found these Home\u00A0Assistant installations on your network\u00A0👀</string>
    <string name="onboarding_setup_host_zeroconfIcon">Home</string>
    <string name="onboarding_setup_shortcut_continue">It\'s done!</string>
    <string name="onboarding_setup_shortcut_quickSettings_instructions">Starting in Android 7, you can access your Home Slide devices by adding a shortcut in your Quick Settings panel.</string>
    <string name="onboarding_setup_shortcut_quickSettings_title">➡️ Quick Settings</string>
    <string name="onboarding_setup_shortcut_deviceControls_instructions">Starting in Android 11, you can access your Home Slide devices directly from your power menu, if your phone or tablet supports this feature.</string>
    <string name="onboarding_setup_shortcut_deviceControls_title">➡️ Device Controls</string>
    <string name="onboarding_setup_shortcut_assistant_instructions">Not a fan of your phone\'s assistant? You can set Home Slide as your default assistant app, and access it from anywhere, just like you can with your current assistant. Visit the "Default Apps" section in your device\'s settings.</string>
    <string name="onboarding_setup_shortcut_assistant_action">Open default app settings</string>
    <string name="onboarding_setup_shortcut_assistant_title">➡️ Setting as Assistant</string>
    <string name="onboarding_setup_shortcut_wear_instructions">You can access your Home Slide devices from your Wear OS smart watch. You just need to download the companion app.</string>
    <string name="onboarding_setup_shortcut_wear_action">Install on my watch</string>
    <string name="onboarding_setup_shortcut_wear_title">➡️ Install the Wear OS app</string>
    <string name="onboarding_setup_shortcut_subtitle">Enable quick access</string>
    <string name="onboarding_setup_shortcut_wear_success">Look at your watch!</string>
    <string name="onboarding_setup_shortcut_wear_failure">Couldn\'t find a paired Wear OS device</string>
    <string name="onboarding_success_continue">Let\'s begin</string>
    <string name="onboarding_success_subtitle">Enjoy 😄</string>
    <string name="onboarding_success_title">We\'re done!</string>
    <string name="onboarding_welcome_continue">Begin</string>
    <string name="onboarding_welcome_details">Before you can start controlling your home, we have a few things to set up.</string>
    <string name="onboarding_welcome_title">Welcome 👋</string>

    <string name="result_contentDescription_error">Error</string>
    <string name="result_contentDescription_loading">Loading</string>
    <string name="result_contentDescription_success">Success</string>

</resources>