<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="96dp">

            <TextView
                android:id="@+id/lbl_step_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/onboarding_setup_shortcut_subtitle"
                android:textAppearance="?textAppearanceHeadline4" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_quickSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_shortcutSetup_quickSettings_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/onboarding_setup_shortcut_quickSettings_title"
                        android:textAppearance="?textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/textView_shortcutSetup_quickSettings_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/onboarding_setup_shortcut_quickSettings_instructions"
                        android:textAppearance="?textAppearanceBody2" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_deviceControls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_shortcutSetup_deviceControls_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/onboarding_setup_shortcut_deviceControls_title"
                        android:textAppearance="?textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/textView_shortcutSetup_deviceControls_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/onboarding_setup_shortcut_deviceControls_instructions"
                        android:textAppearance="?textAppearanceBody2" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_assistant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_shortcutSetup_assistant_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/onboarding_setup_shortcut_assistant_title"
                        android:textAppearance="?textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/textView_shortcutSetup_assistant_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/onboarding_setup_shortcut_assistant_instructions"
                        android:textAppearance="?textAppearanceBody2" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_wear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_shortcutSetup_wear_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/onboarding_setup_shortcut_wear_title"
                        android:textAppearance="?textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/textView_shortcutSetup_wear_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/onboarding_setup_shortcut_wear_instructions"
                        android:textAppearance="?textAppearanceBody2" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="32dp"
        android:text="@string/onboarding_setup_shortcut_continue" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>