<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Baptiste Candellier
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="48dp"
    android:layout_height="match_parent"
    app:cardCornerRadius="4dp"
    tools:ignore="RtlSymmetry">

    <ImageView
        android:id="@+id/icon_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSuccess"
        android:contentDescription="@string/result_contentDescription_success"
        android:padding="4dp"
        android:paddingStart="20dp"
        app:tint="?colorOnSecondary"
        app:srcCompat="@drawable/ic_check" />

    <ImageView
        android:id="@+id/icon_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorError"
        android:contentDescription="@string/result_contentDescription_error"
        android:padding="4dp"
        android:paddingStart="20dp"
        app:tint="?colorOnSecondary"
        app:srcCompat="@drawable/ic_error" />

    <ImageView
        android:id="@+id/icon_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/result_contentDescription_loading"
        android:padding="4dp"
        android:paddingStart="20dp"
        app:tint="?colorPrimary"
        app:srcCompat="@drawable/avd_loading" />


</androidx.cardview.widget.CardView>