<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_step_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:text="@string/onboarding_setup_host_subtitle"
                android:textAppearance="?textAppearanceHeadline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <fr.outadoc.homeslide.app.onboarding.feature.host.ResultIconView
                android:id="@+id/view_discovery_result"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/onboarding_setup_host_hint"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@+id/view_discovery_result"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_step_subtitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_instance_base_url"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textUri" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_continue"
                style="@style/Widget.App.Button.Login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/onboarding_setup_auth_action"
                app:layout_constraintEnd_toEndOf="@+id/view_discovery_result"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <TextView
                android:id="@+id/lbl_zeroconf_helper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/onboarding_setup_host_zeroconf"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/lbl_step_subtitle"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/btn_continue"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_zeroconf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                android:layoutAnimation="@anim/layoutanimation_item_host"
                android:nestedScrollingEnabled="false"
                android:paddingHorizontal="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_zeroconf_helper"
                tools:listitem="@layout/item_zeroconf_host" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout_auth_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="?colorSurface"
        android:visibility="gone">

        <ImageView
            android:id="@+id/icon_loading"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:contentDescription="@string/result_contentDescription_loading"
            app:srcCompat="@drawable/avd_loading"
            app:tint="?colorOnSurface" />

    </FrameLayout>
</FrameLayout>